--- a/templates/home.html
+++ b/templates/home.html
@@ -86,7 +86,7 @@
         
 
         // Send the selected options to the server
-        fetch('/submit', {
+        fetch('/submit_first_entry', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json',
